--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <title>Jacob Oakley</title>
   </head>
   <body>
-
+    <h1>Hello Pluralsight</h1>
+    <ul>
+      <li>Express</li>
+      <li>Creating Web API's</li>
+    </ul>
   </body>
 </html>
